Fix: remove focus outline and increase width scrollbar

--- a/src/scss/drawerr.scss
+++ b/src/scss/drawerr.scss
@@ -117,6 +117,7 @@
 	width:40px;
 	height:30px;
 	padding:0;
+	outline: none;
 
 	span {
 		width:inherit;
