--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,7 +7,7 @@ $drawerr-shadow-depth: 10px !default;
 $drawerr-width: 300px !default;
 
 // Scrollbar
-$drawerr-scrollbar: 3px !default;
+$drawerr-scrollbar: 4px !default;
 $drawerr-scrollbar-thumb: darken($drawerr-secondary-color, 50%) !default;
 $drawerr-scrollbar-track-color: $drawerr-secondary-color!default;
 
